[gd_scene load_steps=7 format=3 uid="uid://q5xkg5bg8wnk"]

[ext_resource type="Script" path="res://BrainVisualizer/UI/Windows/Mapping_Definition/WindowEditMappingDefinition.gd" id="1_1yhba"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="1_ev3y5"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/DropDown/CorticalDropDown.gd" id="2_ds7ss"]
[ext_resource type="Texture2D" uid="uid://c7ewdn04rapbx" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/arrow1.png" id="4_q8idl"]
[ext_resource type="PackedScene" uid="uid://c4hu4bdxc8gu3" path="res://BrainVisualizer/UI/Windows/Mapping_Definition/Mapping_Views/GeneralMappingEditor.tscn" id="6_miy2l"]
[ext_resource type="PackedScene" uid="uid://cbu2hexbc7qqg" path="res://BrainVisualizer/UI/Windows/Mapping_Definition/Mapping_Views/SingleMappingConnectionToggle.tscn" id="7_k31fw"]

[node name="WindowEditMappingDefinition" type="VBoxContainer" node_paths=PackedStringArray("theme_scalar_nodes_to_not_include_or_search")]
offset_right = 126.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_1yhba")
theme_scalar_nodes_to_not_include_or_search = [NodePath("WindowPanel/WindowMargin/WindowInternals")]

[node name="TitleBar" parent="." instance=ExtResource("1_ev3y5")]
layout_mode = 2
title = "Edit Mappings"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_type_variation = &"WindowOuterMargin"

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SourceAndDestination" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="src_box" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals/SourceAndDestination"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/SourceAndDestination/src_box"]
layout_mode = 2
text = "Source:"

[node name="src_dropdown" type="OptionButton" parent="WindowPanel/WindowMargin/WindowInternals/SourceAndDestination/src_box"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("2_ds7ss")

[node name="TextureRect" type="TextureRect" parent="WindowPanel/WindowMargin/WindowInternals/SourceAndDestination"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"TextureRect_wide"
texture = ExtResource("4_q8idl")
expand_mode = 1

[node name="des_box" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals/SourceAndDestination"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/SourceAndDestination/des_box"]
layout_mode = 2
text = "Destination:"

[node name="des_dropdown" type="OptionButton" parent="WindowPanel/WindowMargin/WindowInternals/SourceAndDestination/des_box"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("2_ds7ss")

[node name="gap" type="Control" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Mapping_Details" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("6_miy2l")]
layout_mode = 2

[node name="SingleMappingConnectionToggle" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("7_k31fw")]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="BottomButtons" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="cancel" type="Button" parent="WindowPanel/WindowMargin/WindowInternals/BottomButtons"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme_type_variation = &"Button_big"
text = "Cancel"

[node name="update" type="Button" parent="WindowPanel/WindowMargin/WindowInternals/BottomButtons"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme_type_variation = &"Button_big"
text = "Update"

[connection signal="user_selected_cortical_area" from="WindowPanel/WindowMargin/WindowInternals/SourceAndDestination/src_box/src_dropdown" to="." method="_source_changed"]
[connection signal="user_selected_cortical_area" from="WindowPanel/WindowMargin/WindowInternals/SourceAndDestination/des_box/des_dropdown" to="." method="_destination_changed"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/BottomButtons/cancel" to="." method="close_window"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/BottomButtons/update" to="." method="_request_apply_mappings_to_FEAGI"]
